Added field_type filter, refactored form.html

--- a/web/domain_app/trackie/templates/macro/form.html
+++ b/web/domain_app/trackie/templates/macro/form.html
@@ -1,14 +1,15 @@
+{% load field_type %}
 {% csrf_token %}
 <div class="form-group" id="id_non_field_errors"></div>
 {% for field in form %}
     {% with model_name=field.field.widget.attrs|get_item:'data-ng-model' %}
-        {% if field.field.widget.input_type in default_fields %}
+        {% if field.field|field_type == "BooleanField" %}
+            <div class="checkbox" data-ng-class="{ 'has-error' : {{ form_name }}.{{ field.name }}.$invalid && !{{ form_name }}.{{ field.name }}.$pristine, 'has-success' : {{ form_name }}.{{ field.name }}.$valid && !{{ form_name }}.{{ field.name }}.$pristine }">
+            <label>{{ field }}{{ field.label }}</label>
+        {% else %}
             <div class="form-group" data-ng-class="{ 'has-error' : {{ form_name }}.{{ field.name }}.$invalid && !{{ form_name }}.{{ field.name }}.$pristine, 'has-success' : {{ form_name }}.{{ field.name }}.$valid && !{{ form_name }}.{{ field.name }}.$pristine }">
             <label for="{{ field.id_for_label }}" class="control-label">{{ field.label }}</label>
             {{ field }}
-        {% else %}
-            <div class="checkbox" data-ng-class="{ 'has-error' : {{ form_name }}.{{ field.name }}.$invalid && !{{ form_name }}.{{ field.name }}.$pristine, 'has-success' : {{ form_name }}.{{ field.name }}.$valid && !{{ form_name }}.{{ field.name }}.$pristine }">
-            <label>{{ field }}{{ field.label }}</label>
         {% endif %}
         {% if field.field.help_text %}
             <p class="help-block">{{ field.field.help_text }}</p>
