--- a/web/domain_app/trackie/templates/partials/track/create.html
+++ b/web/domain_app/trackie/templates/partials/track/create.html
@@ -1,4 +1,11 @@
 <div class="row">
+    <div class="col-xs-12">
+        <div class="page-header" style="margin-top: 0;">
+            <h1 style="margin-top: 0;">Pridať trať</h1>
+        </div>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-6">
         <div class="well">
             {% with form_name="trackForm" %}
