Hide ui-grid without data

--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -16,7 +16,7 @@
         <div id="map" class="map" style="max-height: 500px;"></div>
     </div>
 </div>
-<div class="row" data-ng-show="gridOptions.data">
+<div class="row" data-ng-show="gridOptions.data.lenght">
     <div class="col-xs-12">
         <div ui-grid="gridOptions" data-ui-grid-selection data-ui-grid-pagination class="grid"></div>
     </div>
