--- a/web/domain_app/trackie/templates/partials/racer/detail.html
+++ b/web/domain_app/trackie/templates/partials/racer/detail.html
@@ -30,7 +30,7 @@
     </div>
     <div class="col-md-6">
         {% verbatim %}
-        <img class="img-responsive" data-ng-src="{{ racer.photo }}"/>
+        <img class="img-responsive" data-ng-src="{{ racer.photo.thumbnail }}"/>
         {% endverbatim %}
     </div>
 </div>
