--- a/web/domain_app/trackie/templates/partials/racer/detail.html
+++ b/web/domain_app/trackie/templates/partials/racer/detail.html
@@ -11,7 +11,12 @@
     </div>
 </div>
 <div class="row" data-ng-show="racer">
-    <div class="col-md-6">
+    <div class="col-sm-2">
+        {% verbatim %}
+        <img class="img-responsive" data-ng-src="{{ racer.photo.thumbnail }}"/>
+        {% endverbatim %}
+    </div>
+    <div class="col-sm-10">
         <div class="row">
             {% verbatim %}
             <div class="col-xs-12">
@@ -27,10 +32,5 @@
             </div>
             {% endverbatim %}
         </div>
-    </div>
-    <div class="col-md-6">
-        {% verbatim %}
-        <img class="img-responsive" data-ng-src="{{ racer.photo.thumbnail }}"/>
-        {% endverbatim %}
     </div>
 </div>
