--- a/web/domain_app/trackie/templates/partials/track/detail.html
+++ b/web/domain_app/trackie/templates/partials/track/detail.html
@@ -36,8 +36,7 @@
     <div class="col-md-6">
         <div class="row">
             <div class="col-xs-12">
-                <script src="{% static 'assets/trackie/js/map.js' %}"></script>
-                <div id="map" class="map" style="max-height: 500px;"></div>
+                <div id="track-map" class="map" style="max-height: 500px;"></div>
             </div>
         </div>
     </div>
