--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -116,6 +116,7 @@
     <link rel="stylesheet" href="{% static 'third-party/angular/angular-csp.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/openlayers/ol.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/angular-ui-grid/ui-grid.min.css' %}">
+    <link rel="stylesheet" href="{% static 'third-party/ol-sidebar2/css/ol3-sidebar.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets/trackie/css/bootstrap-trackie.css' %}">
     <link rel="stylesheet" href="{% static 'assets/trackie/css/custom-trackie.css' %}">
@@ -136,6 +137,7 @@
     <script src="{% static 'third-party/angular-ui-grid/ui-grid.min.js' %}"></script>
     <script src="{% static 'third-party/openlayers/ol.js' %}"></script>
     <script src="{% static 'third-party/turf/turf.min.js' %}"></script>
+    <script src="{% static 'third-party/ol-sidebar2/js/ol3-sidebar.min.js' %}"></script>
 
     <script src="{% static 'assets/trackie/js/helpers.js' %}"></script>
     <script src="{% static 'assets/trackie/js/angular_modules/trackie.js' %}"></script>
