--- a/web/domain_app/trackie/templates/partials/track/update.html
+++ b/web/domain_app/trackie/templates/partials/track/update.html
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
         <div class="well">
             {% with form_name="trackForm" %}
             <form name="{{ form_name }}" id="track-form" data-ng-submit="updateTrack()">
