--- a/web/domain_app/trackie/templates/partials/racer/create.html
+++ b/web/domain_app/trackie/templates/partials/racer/create.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-sm-6">
         <div class="well">
             {% with form_name="racerForm" %}
             <form name="{{ form_name }}" id="racer-form" data-ng-submit="createRacer()">
