--- a/web/domain_app/trackie/templates/partials/track/detail.html
+++ b/web/domain_app/trackie/templates/partials/track/detail.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 <div class="row" data-ng-show="track">
-    <div class="col-md-6">
+    <div class="col-sm-6">
         <div class="row">
             {% verbatim %}
             <div class="col-xs-12">
@@ -33,7 +33,7 @@
             {% endverbatim %}
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-6">
         <div class="row">
             <div class="col-xs-12">
                 <div id="track-map" class="map" style="max-height: 500px;"></div>
