--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -26,6 +26,12 @@
                 </div>
             </div>
         </div>
+        <div class="map-end" data-ng-show="endOfRace">
+            <div class="map-end-background"></div>
+            <div class="bg-warning">
+                <div class="text-end">Živý prenos bol ukončený</div>
+            </div>
+        </div>
         <div id="map" class="map map-with-sidebar" style="max-height: 500px;"></div>
     </div>
     {% endverbatim %}
