Updated simulation script, added racer selection, info about racer in sidebar, added about field for Racer, updated python packages, trash

--- a/web/domain_app/trackie/static/assets/trackie/css/custom-trackie.css
+++ b/web/domain_app/trackie/static/assets/trackie/css/custom-trackie.css
@@ -6,6 +6,10 @@
     font-weight: bold;
 }
 
+.text-pre-line {
+    white-space: pre-line;
+}
+
 .underline-text {
     text-decoration: underline;
 }
