--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -22,7 +22,8 @@
             </div>
             <div class="sidebar-content">
                 <div class="sidebar-pane" id="profile">
-                    <h1 class="sidebar-header">Profile<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                    <h1 class="sidebar-header">Pretekár<span class="sidebar-close"><i class="fa fa-caret-left"></i></span></h1>
+                    <div data-ng-include="'partials/racer/detail_sidebar.html'"></div>
                 </div>
             </div>
         </div>
