--- a/web/domain_app/trackie/templates/partials/racer/detail.html
+++ b/web/domain_app/trackie/templates/partials/racer/detail.html
@@ -1,4 +1,3 @@
-{% load static %}
 <div class="row" data-ng-show="racer">
     <div class="col-xs-12">
         <div class="page-header" style="margin-top: 0;">
@@ -21,10 +20,8 @@
             {% verbatim %}
             <div class="col-xs-12">
                 <dl>
-                    <dt>Meno</dt>
-                    <dd>{{ racer.first_name }}</dd>
-                    <dt>Priezvisko</dt>
-                    <dd>{{ racer.last_name }}</dd>
+                    <dt>O pretekárovi</dt>
+                    <dd class="text-pre-line">{{ racer.about || "Prázdné" }}</dd>
                 </dl>
             </div>
             <div class="col-xs-12">
