--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -35,6 +35,9 @@
         </div>
         <div id="map" class="map map-with-sidebar" style="max-height: 500px;"></div>
     </div>
+    <div class="col-xs-12">
+        <player data-ng-race="race"></player>
+    </div>
     {% endverbatim %}
 </div>
 <div class="row" data-ng-if="gridOptions.data.length">
