--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -36,7 +36,7 @@
         <div id="map" class="map map-with-sidebar" style="max-height: 500px;"></div>
     </div>
     <div class="col-xs-12">
-        <player data-ng-race="race"></player>
+        <player data-ng-show="race.end && showPlayer" data-ng-race="race"></player>
     </div>
     {% endverbatim %}
 </div>
