--- a/web/domain_app/trackie/templates/partials/player.html
+++ b/web/domain_app/trackie/templates/partials/player.html
@@ -1,30 +1,30 @@
-<div class="timestamp">
-    <div class="timestamp-body">
-        <div class="timestamp-text">Ola</div>
-        <div class="timestamp-bottom">
-            <div class="timestamp-caret"></div>
-        </div>
-    </div>
-</div>
 <div class="player">
     <div class="flex">
         <div class="flex-item">
-            <select>
-                <option value="1" SELECTED>1x</option>
+            <select data-ng-model="play_speed">
+                <option value="0.25">0.25x</option>
+                <option value="0.5">0.5x</option>
+                <option value="1" selected>1x</option>
                 <option value="2">2x</option>
                 <option value="5">5x</option>
                 <option value="10">10x</option>
                 <option value="20">20x</option>
             </select>
         </div>
-        <div class="flex-item" style="width: 18px;">
-            <i class="fa fa-lg fa-inverse" data-ng-class="{'fa-pause': play, 'fa-play': !play}" data-ng-click="play = !play"></i>
-        </div>
         {% verbatim %}
-        <div class="flex-item player-progress-bar">
-            <div class="player-progress-bar-done" data-ng-style="{width: width + 'px'}"></div>
-            <div class="player-progress-bar-text">{{ current }}</div>
+        <div class="flex-item" style="width: 18px;">
+            <i class="fa fa-lg fa-retweet" data-ng-click="diff_time = !diff_time"></i>
+        </div>
+        <div class="flex-item" style="width: 18px;">
+            <i class="fa fa-lg fa-inverse" data-ng-class="{'fa-pause': play, 'fa-play': !play}" data-ng-click="player.togglePlay()"></i>
         </div>
         {% endverbatim %}
+        <div class="flex-item player-progress">
+            <div class="player-progress-bar">
+                <div class="player-progress-bar-done pointer" style="width: 0"></div>
+                <div class="player-progress-bar-played pointer" style="width: 0"></div>
+                <div class="player-progress-bar-text noselect pointer"></div>
+            </div>
+        </div>
     </div>
 </div>
