--- a/web/domain_app/trackie/templates/partials/map.html
+++ b/web/domain_app/trackie/templates/partials/map.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div id="map" class="map map-with-sidebar" style="max-height: 500px;"></div>
+        <div id="map" class="map map-with-sidebar"></div>
     </div>
     <div class="col-xs-12">
         <player data-ng-show="showPlayer"></player>
