--- a/web/domain_app/trackie/templates/partials/track/create.html
+++ b/web/domain_app/trackie/templates/partials/track/create.html
@@ -19,6 +19,6 @@
         </div>
     </div>
     <div class="col-sm-6">
-        <div class="map" id="track-preview" style="max-height: 500px;"></div>
+        <div class="map" id="track-preview"></div>
     </div>
 </div>
