--- a/web/domain_app/trackie/templates/partials/track/detail.html
+++ b/web/domain_app/trackie/templates/partials/track/detail.html
@@ -36,7 +36,7 @@
     <div class="col-sm-6">
         <div class="row">
             <div class="col-xs-12">
-                <div id="track-map" class="map" style="max-height: 500px;"></div>
+                <div id="track-map" class="map""></div>
             </div>
         </div>
     </div>
