--- a/web/domain_app/trackie/templates/trackie/base.html
+++ b/web/domain_app/trackie/templates/trackie/base.html
@@ -119,6 +119,7 @@
     <link rel="stylesheet" href="{% static 'third-party/openlayers/ol.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/angular-ui-grid/ui-grid.min.css' %}">
     <link rel="stylesheet" href="{% static 'third-party/ol-sidebar2/css/ol3-sidebar.min.css' %}">
+    <link rel="stylesheet" href="{% static 'third-party/datetimepicker/css/bootstrap-datetimepicker.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets/trackie/css/bootstrap-trackie.css' %}">
     <link rel="stylesheet" href="{% static 'assets/trackie/css/custom-trackie.css' %}">
@@ -138,10 +139,11 @@
     <script src="{% static 'third-party/moment-timezone/moment-timezone-with-data.min.js' %}"></script>
     <script src="{% static 'third-party/moment-duration/moment-duration-format.js' %}"></script>
     <script src="{% static 'third-party/lodash/lodash.min.js' %}"></script>
-    <script src="{% static 'third-party/restangular/restangular.js' %}"></script>
+    <script src="{% static 'third-party/restangular/restangular.min.js' %}"></script>
     <script src="{% static 'third-party/angular-ui-grid/ui-grid.min.js' %}"></script>
     <script src="{% static 'third-party/openlayers/ol.js' %}"></script>
     <script src="{% static 'third-party/ol-sidebar2/js/ol3-sidebar.min.js' %}"></script>
+    <script src="{% static 'third-party/datetimepicker/js/bootstrap-datetimepicker.min.js' %}"></script>
 
     <script src="{% static 'assets/trackie/js/helpers.js' %}"></script>
     <script src="{% static 'assets/trackie/js/angular_modules/trackie.js' %}"></script>
